@@ -1,4 +1,4 @@
-(defproject jepsen "0.1.14-SNAPSHOT"
+(defproject jepsen "0.1.15"
   :description "Distributed systems testing framework."
   :url         "https://jepsen.io"
   :license {:name "Eclipse Public License"
@@ -9,17 +9,17 @@
                  [spootnik/unilog "0.7.13"]
                  [org.clojure/tools.cli "0.4.1"]
                  [clj-time "0.11.0"]
-                 [jepsen.txn "0.1.1-SNAPSHOT"]
+                 [jepsen.txn "0.1.1"]
                  [knossos "0.3.4" :exclusions [org.slf4j/slf4j-log4j12]]
                  [tea-time "1.0.1"]
                  [clj-ssh "0.5.14"]
                  [gnuplot "0.1.1"]
-                 [http-kit "2.1.18"]
+                 [http-kit "2.3.0"]
                  [ring "1.6.0-beta5"]
                  [hiccup "1.0.5"]
                  [metametadata/multiset "0.1.1"]
                  [byte-streams "0.2.2"]
-                 [dom-top "1.0.4"]
+                 [dom-top "1.0.5"]
                  [slingshot "0.12.2"]
                  [org.clojure/data.codec "0.1.1"]
                  [fipp "0.6.13"]
@@ -27,9 +27,8 @@
   :main jepsen.cli
   :plugins [[lein-localrepo "0.5.4"]
             [lein-codox "0.10.3"]]
-  :jvm-opts ["-Xmx32g" "-XX:+UseConcMarkSweepGC" "-XX:+UseParNewGC"
-             "-XX:+CMSParallelRemarkEnabled" "-XX:+AggressiveOpts"
-             "-XX:+UseFastAccessorMethods" "-server"]
+  :jvm-opts ["-Xmx32g"
+             "-server"]
   :test-selectors {:default (fn [m]
                               (not (or (:integration m)
                                        (:logging m))))
@@ -39,9 +38,6 @@
           :source-uri "https://github.com/jepsen-io/jepsen/blob/{version}/jepsen/{filepath}#L{line}"
           :metadata {:doc/format :markdown}}
   :profiles {:uberjar {:aot :all}
-             :dev {:jvm-opts ["-Xmx32g" "-XX:+UseConcMarkSweepGC"
-                              "-XX:+UseParNewGC"
-                              "-XX:+CMSParallelRemarkEnabled"
-                              "-XX:+AggressiveOpts"
-                              "-XX:+UseFastAccessorMethods" "-server"
+             :dev {:jvm-opts ["-Xmx32g"
+                              "-server"
                               "-XX:-OmitStackTraceInFastThrow"]}})
